<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contacts.ContactsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblTitleForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleForm"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_below="@+id/toolbar"
        />

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lblTitleForm"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginForm"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintName"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginForm"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionNext"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginForm"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintMessage"
                android:inputType="textMultiLine"
                android:lines="3"
                android:imeOptions="actionDone"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegisterContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegisterContact"
        android:layout_margin="@dimen/marginForm"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
